--- a/index.html
+++ b/index.html
@@ -153,7 +153,11 @@
 
         <h4>17. Мило </h4> 
 		<div>
-            
+            Мне так нравится, как ты мил и нежен со мной, даже когда я не права. Ты ценишь мои чувства, мои слова. Мне очень нравится, что мы не боимся 
+            говорить друг другу нежные слова. Что мы не устаём говорить о любви друг к другу. Нравится, когда ты делаешь мне комплименты. Благодаря тебе я чувствую 
+            себя намного увереннее. Ты даришь мне эту уверенность. Ты делаешь меня лучше. Благодаря тебе на моих губах улыбка. Даже сейчас, когда я пишу это 
+            и вспоминаю тебя - улыбаюсь. Ты моё счастье. Нравится, что я могу говорить или делать что-то милое для тебя, а тебе это не покажется милым. Ты 
+            настолько идеален, что, да, снова слёзки счастья. Ты прекрасен.
         </div> 
 
         <h4>18. </h4> 
