--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         <h4>12. Твои рассказы</h4>
         <div>
             Ты так мило и подробно каждый раз рассказываешь мне о чем-то. Я очень рада, что ты хочешь делиться со мной тем, что ты пережил. Я очень люблю это.<br>
-            Мне всегда интересно, как прошёл твой день, сколько раз ты покушал, какого насекомого убил на этот раз и почему вдруг в твоих глаза грусть. Я хочу быть рядом 
-            в любой момент твоей жизни. И я рядом, да.
+            Мне всегда интересно, как прошёл твой день, сколько раз ты покушал, какого насекомого убил на этот раз и почему вдруг в твоих глаза грусть. Мне так нравится, 
+            когда ты увлекаешься своим рассказом. Мне нравится тебя слушать. Я хочу быть рядом в любой момент твоей жизни. И я рядом, да.
         </div>
 
         <h4>13. Я люблю твою открытость</h4> 
