--- a/index.html
+++ b/index.html
@@ -160,10 +160,12 @@
             настолько идеален, что, да, снова слёзки счастья. Ты прекрасен.
         </div> 
 
-        <h4>18. </h4> 
-		<div>
-            
-        </div> 
+        <h4>18. Понимание </h4> 
+	<div>
+            Между нами гармония. И это прекрасно. Я никогда не встречала такого взаимопонимания у людей, с которыми знакома, значит, 
+            это редкость. Я рада, что ты с тобой - действительно особенные. Я всё ещё не до конца осознаю это, но каждый раз мне приятно. Уверена, что в 
+            ирл мы будем понимать друг друга с одного взгляда, ведь даже сейчас мы понимаем  друг друга без слов. Ты мне нравишься таким. Нравишься ты настоящий.
+        </div>
 
         <h4>19. </h4> 
 		<div>
