--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
 
 <body>
-    <embed src="music.mp3" autostart="true" loop="true" hidden="true"> </embed> 
+    <embed src="music.mp3" autostart="true" loop="true" hidden="true"> 
 
     <div id="petals"></div>
         
