--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
 
 <body>
-    <embed src="music.mp3" autostart="true" loop="true" hidden="true"> </embed> 
+    <embed src="music.mp3" autostart="true" loop="6" hidden="true"> </embed> 
     
 
     <div id="petals"></div>
@@ -191,7 +191,17 @@
           всего самого наилучшего, потому что ты достоин только лучшего. Я уверена, что ты добьёешься намеченных целей и не остановишься на достигнутом. Я восхищаюсь тобой. 
           Ты тот человек, которого я ставлю в пример многим знакомым. Оставайся таким же. Я желаю тебе счастье. Не грусти.<br> Думай оптимистично. Смотри на мир так, как 
           смотришь сейчас. Никогда не теряй ту доброту, которая живёт в тебе. Не теряй искренность. Не забирай своё сердце у меня, потому что ты - единственное, что я по-настоящему 
-          люблю.
+          люблю. Я уверена в том, что мы будем счастливы и что нас ждёт долгая жизнь вместе. <br> Люби себя так же, как я люблю тебя. Забудь, что такое печаль, потому что 
+          теперь я постараюсь забрать всю твою печаль себе. Никогда не сдавайся, даже если тебе захочется. Забудь про одиночество, потому что теперь я с тобой. Береги своё здоровье, 
+          потому что тебе жить ещё очень долго. Будь всегда рядом со мной. Пообещай сейчас мысленно, что будешь заботиться о себе намного лучше, чем делаешь сейчас. <br>
+          Ты - прекрасный человек. Ты стал моей жизнью. Ты стал мной. Я очень рада, что ты есть. Теперь ты стал взрослее и я знаю, что ты не потратишь этот год на что-то неважное. Да, 
+          ты - человек, который может добиться желаемого. Я верю в тебя всей душой. Восхищаюсь и очень люблю. <br>
+          Спасибо тебе за всё, что ты делал и делаешь для меня. Я ценю каждый твой поступок. Ценю каждое твоё слово. Сергей, я всегда буду рядом с тобой.<br>
+          Можешь положиться на меня в любой момент. Я уверена в нас. Уверена, что через десять, а может и через пятьдесят лет. Никогда не бойся меня потерять, потому что 
+          моё сердце выбрало тебя, и этот выбор никогда не изменится. Будь уверен во мне. Будь уверен в себе. Ты никогда не делал мне неприятно. Единственный человек, который 
+          способен дарить мне только положительные эмоции. Я очень жду, когда мы окажемся близко. Мне хочется, чтобы сейчас ты почувствовал мои объятия. Закрой глаза на десять секунд и 
+          представь, что я обняла тебя, прошептала на ушко, что люблю тебя очень, и поцеловала голову. Мы рядом. Представил? Так будет. Надеюсь, ты никогда не пожалеешь, что 
+          отдал своё сердце мне, что открыл мне свою душу. Твой внутренний мир - мой космос, в котором я теперь летаю. В нашей любви нет границ. Она бесконечна. С днём рождения, котёнок. 
     </footer>
         
     <script src="script_two.js"></script>
