--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
 
 <body>
-    <embed src="music.mp3" autostart="true" loop="6" hidden="true"> </embed> 
+    <embed src="music.mp3" autostart="true" loop="true" hidden="true" pluginspage="http://www.macromedia.com/go/getflashplayer"> </embed> 
     
 
     <div id="petals"></div>
