--- a/index.html
+++ b/index.html
@@ -199,7 +199,11 @@
           Спасибо тебе за всё, что ты делал и делаешь для меня. Я ценю каждый твой поступок. Ценю каждое твоё слово. Сергей, я всегда буду рядом с тобой.<br>
           Можешь положиться на меня в любой момент. Я уверена в нас. Уверена, что через десять, а может и через пятьдесят лет. Никогда не бойся меня потерять, потому что 
           моё сердце выбрало тебя, и этот выбор никогда не изменится. Будь уверен во мне. Будь уверен в себе. Ты никогда не делал мне неприятно. Единственный человек, который 
-          способен дарить мне только положительные эмоции. Я очень жду, когда мы окажемся близко. Мне хочется, чтобы сейчас ты почувствовал мои объятия. Закрой глаза на десять секунд и 
+          способен дарить мне только положительные эмоции. В моей голове очень много слов, которые я хочу сказать тебе, но чтобы на это хватило времени - ты должен быть со мной 
+          всю жизнь. Я думаю о тебе каждую секунду. У нас долгая история, у которой не будет конца, потому что мы всегда будем вместе. Спасибо тебе за каждое тёплое воспоминание, 
+	    которое ты мне подарил. Всегда при мысли о тебе внутри появляется тепло. Я улыбаюсь и чувствую себя счастливой. Ты самый лучший. 
+	    Я очень жду, когда мы окажемся близко. Мне хочется, 
+	  чтобы сейчас ты почувствовал мои объятия. Закрой глаза на десять секунд и 
           представь, что я обняла тебя, прошептала на ушко, что люблю тебя очень, и поцеловала голову. Мы рядом. Представил? Так будет. Надеюсь, ты никогда не пожалеешь, что 
           отдал своё сердце мне, что открыл мне свою душу. Твой внутренний мир - мой космос, в котором я теперь летаю. В нашей любви нет границ. Она бесконечна. С днём рождения, котёнок. 
     </footer>
