--- a/index.html
+++ b/index.html
@@ -207,6 +207,16 @@
           представь, что я обняла тебя, прошептала на ушко, что люблю тебя очень, и поцеловала голову. Мы рядом. Представил? Так будет. Надеюсь, ты никогда не пожалеешь, что 
           отдал своё сердце мне, что открыл мне свою душу. Твой внутренний мир - мой космос, в котором я теперь летаю. В нашей любви нет границ. Она бесконечна. С днём рождения, котёнок. 
     </footer>
+		<h4>Смотри</h4>
+        <div>
+            Когда-нибудь мы сделаем такое сами. Ты и я <br>
+        <img src="photo\1.jpg"> <br>
+        Мы - это космос <br>
+        <img src="photo\2.jpg"> <br>
+            А это наше первое совместное путешествие. Мы в тот день говорили по телефону около часа. Помнишь, я говорила, что мне надо кое-что сфоткать и ты увидишь это потом? <br>
+        <img src="photo\3.jpg">
+        <img src="photo\4.jpg"> <br>
+        </div>
 	</div>
 
         
