--- a/index.html
+++ b/index.html
@@ -207,6 +207,18 @@
           представь, что я обняла тебя, прошептала на ушко, что люблю тебя очень, и поцеловала голову. Мы рядом. Представил? Так будет. Надеюсь, ты никогда не пожалеешь, что 
           отдал своё сердце мне, что открыл мне свою душу. Твой внутренний мир - мой космос, в котором я теперь летаю. В нашей любви нет границ. Она бесконечна. С днём рождения, котёнок. 
     </footer>
+		<br>
+    <h4>Смотри</h4>
+    <div>
+        Когда-нибудь мы сделаем такое сами. Ты и я <br>
+        <embed type="image/gif" src="photo\1.jpg"></embed> <br>
+        Мы - это космос <br>
+        <embed type="image/gif" src="photo\2.jpg"></embed> <br>
+        А это наше первое совместное путешествие. Мы в тот день говорили по телефону около часа. Помнишь, я говорила, что мне надо кое-что сфоткать и ты увидишь это потом? <br>
+        <embed type="image/gif" src="photo\3.jpg"></embed>
+        <embed type="image/gif" src="photo\4.jpg"> <br>
+        <p>Я очень люблю тебя</p>
+    </div>
 	</div>
 
         
