--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     
 
     <div id="petals"></div>
+	<forset>✧если тут нет музыки, то открой не в макстоне, пж✧</forset>
         
     <h1>20 причин, почему я люблю тебя</h1>
 
