--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
         
     <h1>20 причин, почему я люблю тебя</h1>
-	<forset>✧если тут нет музыки, то открой не в макстоне, пж✧</forset> <p>
+	<forset>✧если тут нет музыки, то открой не в макстоне, пж✧</forset>
 
 	<div class="container">
 		<h4>1. Я люблю тебя, потому что ты - мой лучик жизни</h4> 
